--- a/src/main/resources/templates/user-create.html
+++ b/src/main/resources/templates/user-create.html
@@ -5,7 +5,7 @@
     <title>Create user</title>
 </head>
 <body>
-<form action="#" th:action="@{/user-create}" th:object="${users}" method="post">
+<form action="#" th:action="@{/user-create}" th:object="${user}" method="post">
     <label for="first_name">First name</label>
     <input type="text" th:field="*{first_name}" id="first_name" placeholder="First Name">
     <label for="last_name">Last name</label>
