--- a/src/main/resources/templates/user-list.html
+++ b/src/main/resources/templates/user-list.html
@@ -18,7 +18,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="user : ${users}">
+            <tr th:each="user : ${user}">
                 <td th:text="${user.id}"></td>
                 <td th:text="${user.first_name  }"></td>
                 <td th:text="${user.last_name}"></td>
